[gd_scene load_steps=21 format=3 uid="uid://u3yge6eccsyl"]

[ext_resource type="PackedScene" uid="uid://bjriv8yh6i6se" path="res://scenes/player/player.tscn" id="1_71cgg"]
[ext_resource type="Script" path="res://scripts/levels/level_base.gd" id="1_alc36"]
[ext_resource type="Texture2D" uid="uid://dg48pgp0pj6vp" path="res://assets/environment/props.png" id="1_ic73o"]
[ext_resource type="PackedScene" uid="uid://nv0ouqjbt71c" path="res://scenes/hud.tscn" id="2_616v2"]
[ext_resource type="Texture2D" uid="uid://b5di52nonsog2" path="res://assets/cherry_spawn.png" id="3_s4s3i"]
[ext_resource type="Texture2D" uid="uid://cwfbq0e2qyjmn" path="res://assets/environment/back.png" id="3_sblw7"]
[ext_resource type="Texture2D" uid="uid://7yw25a74mu36" path="res://assets/environment/middle.png" id="4_jhxo8"]
[ext_resource type="Texture2D" uid="uid://moudiaka6iv6" path="res://assets/gem_spawn.png" id="4_oll5q"]
[ext_resource type="PackedScene" uid="uid://bxeh3nkrg768f" path="res://scenes/tilemaps/world_tile_map.tscn" id="5_wrktr"]
[ext_resource type="Script" path="res://scripts/world/ladders.gd" id="9_e02d0"]

[sub_resource type="Animation" id="Animation_fwmu4"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 265)]
}

[sub_resource type="Animation" id="Animation_w8jec"]
resource_name = "default"
length = 30.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10, 20),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 235), Vector2(-10, 250), Vector2(10, 220)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5bsca"]
_data = {
"RESET": SubResource("Animation_fwmu4"),
"default": SubResource("Animation_w8jec")
}

[sub_resource type="TileMapPattern" id="TileMapPattern_5y7gr"]
tile_data = PackedInt32Array(0, 4, 3, 65536, 4, 4, 131072, 4, 5, 1, 65540, 3, 65537, 65540, 4, 131073, 65540, 5, 2, 131076, 3, 65538, 131076, 4, 131074, 131076, 5)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sbn8x"]
texture = ExtResource("3_s4s3i")
0:0/0 = 0
0:0/0/custom_data_0 = "cherry"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_eojef"]
texture = ExtResource("4_oll5q")
0:0/0 = 0
0:0/0/custom_data_0 = "gem"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v337q"]
texture = ExtResource("1_ic73o")
1:5/0 = 0
1:5/0/custom_data_0 = "door"
2:5/0 = 0
2:4/0 = 0
1:4/0 = 0
2:3/0 = 0
1:3/0 = 0
0:3/0 = 0
0:4/0 = 0
0:5/0 = 0

[sub_resource type="TileSet" id="TileSet_jk0lm"]
custom_data_layer_0/name = "type"
custom_data_layer_0/type = 4
sources/0 = SubResource("TileSetAtlasSource_sbn8x")
sources/1 = SubResource("TileSetAtlasSource_eojef")
sources/4 = SubResource("TileSetAtlasSource_v337q")
pattern_0 = SubResource("TileMapPattern_5y7gr")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v6kba"]
texture = ExtResource("1_ic73o")
9:10/0 = 0
9:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:10/0/physics_layer_0/angular_velocity = 0.0
9:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0.25, 8, 0.25, 8, -8, -8, -8)
7:12/0 = 0
7:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:12/0/physics_layer_0/angular_velocity = 0.0
7:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -2.125, 8, -2.125, 8, 8, -8, 8)
9:12/0 = 0
9:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:12/0/physics_layer_0/angular_velocity = 0.0
9:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -0.25, 8, -0.25, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_3r14y"]
physics_layer_0/collision_layer = 2
sources/0 = SubResource("TileSetAtlasSource_v6kba")

[node name="LevelBase" type="Node2D"]
process_mode = 3
script = ExtResource("1_alc36")

[node name="HUD" parent="." instance=ExtResource("2_616v2")]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
process_mode = 1

[node name="Back" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 1)
motion_mirroring = Vector2(768, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Back"]
scale = Vector2(2, 2)
texture = ExtResource("3_sblw7")
centered = false

[node name="Middle" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.6, 1)
motion_mirroring = Vector2(880, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Middle"]
texture_repeat = 3
position = Vector2(0, 265)
texture = ExtResource("4_jhxo8")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 880, 368)

[node name="ParallaxAnimation" type="AnimationPlayer" parent="ParallaxBackground"]
root_node = NodePath("../Middle")
autoplay = "default"
libraries = {
"": SubResource("AnimationLibrary_5bsca")
}

[node name="WorldTileMap" parent="." instance=ExtResource("5_wrktr")]

[node name="ItemsTileMap" type="TileMap" parent="."]
position = Vector2(4, -1)
tile_set = SubResource("TileSet_jk0lm")
format = 2

[node name="DangerTileMap" type="TileMap" parent="." groups=["danger"]]
tile_set = SubResource("TileSet_3r14y")
format = 2

[node name="Items" type="Node2D" parent="."]

[node name="Ladders" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource("9_e02d0")

[node name="SpawnPosition" type="Marker2D" parent="."]

[node name="Player" parent="." instance=ExtResource("1_71cgg")]

[connection signal="body_entered" from="Ladders" to="Ladders" method="_on_body_entered"]
[connection signal="body_exited" from="Ladders" to="Ladders" method="_on_body_exited"]
